# INT_business_central_project

BACKEND/: .dockerignore  .gitignore  Dockerfile  SSL.py  benchmark_parallel.py  check_chroma_health.py  check_chroma_path.py  diagnose_chroma.py  docker-compose.yml  error_log.txt  pyproject.toml
BACKEND/VECTOR_DB/: INT_experience_collection.py  INT_service_name.py  collection_names.py  db_check.py  int_figure_collection_making.py  int_service_collection.py  retrieval_result.json  test_chroma.py  vector_db.json  vector_db_creation.py  vector_db_making.py  vector_db_making_2.py
BACKEND/VECTOR_DB/INT_WEBSITE_SCRAPE/: intglobal_Services_AI_Analytics.txt  intglobal_Services_AWS.txt  intglobal_Services_Cloud_Devops.txt  intglobal_Services_Customer_Experience.txt  intglobal_Services_digital_engineering.txt
BACKEND/VECTOR_DB/INT_experience_json_schema/: AI Deck.json  Data_Labs_Capability.json  INT- BFS Deck V2.0 - Copy (1).json  INT. BFS Capabilities.json  INT. Blockchain Capability.json  INT. Cloud and DevOps.json  INT. Corporate Profile.json  INT. Insurance Capabilities..json  INT. Origin Insurance Broker_POSP.json  INT.Data Intelligence Capabilities.json  INT.Data_Labs_Capability.json  Pitch Decks.json  Portfolio New.json  Zoho CRM Deck.json
BACKEND/VECTOR_DB/INT_service_name_json_schema/: AI Deck.json  Data_Labs_Capability.json  INT- BFS Deck V2.0 - Copy (1).json  INT. BFS Capabilities.json  INT. Blockchain Capability.json  INT. Cloud and DevOps.json  INT. Insurance Capabilities..json  INT. Origin Insurance Broker_POSP.json  (+4 more)
BACKEND/app/: __init__.py  main.py
(+98 files in other folders)
